--- a/community.html
+++ b/community.html
@@ -33,7 +33,6 @@
 
 <body class="news-page">
 
-
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
@@ -45,44 +44,51 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="index.html" class="active">Our School</a></li>
-          <li class="dropdown"><a href="about.html"><span>About</span> <i
-                class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="students-life.html">Extra-Curricular</a></li>
-              <li><a href="our-facilities.html">School Facilities &amp; Programs</a></li>
+          <!-- <li class="dropdown"><a href="about.html"><span>About</span> <i
+								class="bi bi-chevron-down toggle-dropdown"></i></a>
+						<ul>
+							<li><a href="about.html">About Us</a></li>
+							<li><a href="our-facilities.html">School Facilities &amp; Programs</a></li>
 
-            </ul>
-          </li>
+						</ul>
+					</li> -->
+          <li><a href="about.html" class="active">About Us</a></li>
 
           <li class="dropdown">
-            <a href="admissions.html"><span>Admissions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <a href="#"><span>Admissions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="admissions.html">Admission Process</a></li>
               <li><a href="fees.html">Fees</a></li>
             </ul>
           </li>
-          <li><a href="academics.html">Academics</a></li>
+
+          <li class="dropdown">
+            <a href="academics.html"><span>Academics</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="academics.html">Academics</a></li>
+              <li><a href="students-life.html">Extra-Curricular</a></li>
+            </ul>
+          </li>
           <li><a href="events.html">Events</a></li>
           <li><a href="employ.html">Employment</a></li>
           <li class="dropdown"><a href="#"><span>Quick Links</span> <i
                 class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="select-btw.html">Business plan &amp; school polices</a></li>
               <li><a href="accomodation.html">Student Accommodation Info</a></li>
               <li><a href="scholarship-aid.html">Financial Aid &amp; Scholarships</a></li>
               <li><a href="community.html">Community Engagement</a></li>
               <li><a href="portal.html">Portal Login</a></li>
             </ul>
           </li>
-
           <li><a href="contact.html">Contact</a></li>
+
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
     </div>
   </header>
+
   <main class="main">
 
     <!-- Page Title -->
@@ -184,7 +190,7 @@
 
 
     <!-- Engagement & Events -->
-    <section class="community-events section">
+    <section class="community-events section stats students-life section">
       <div class="container" data-aos="fade-up">
         <div class="text-center mb-5">
           <h2>Community Engagement & Activities</h2>
@@ -234,25 +240,33 @@
           </div>
         </div>
       </div>
-    </section>
     </div>
+    </div>
+    <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+      <div class="cta-wrapper" data-aos="fade-up" data-aos-delay="200">
+        <div class="cta-content">
+          <div class="row align-items-center">
+            <div class="col-lg-8" data-aos="fade-right" data-aos-delay="300">
+              <h3>Ready to Join Our Community?</h3>
+              <p>
+                Step into a school community that celebrates every student’s potential.
+                Discover, learn, and grow with us at Brenitoch.
+              </p>
+            </div>
+            <div class="col-lg-4" data-aos="fade-left" data-aos-delay="400">
+              <div class="cta-buttons">
+                <a href="#" class="btn btn-primary">Schedule a Visit</a>
+                <a href="#" class="btn btn-outline">Apply Now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
     </section>
     <!-- /Engagement & Events -->
-
-
-    <!-- Call to Action -->
-    <section class="cta section text-center bg-primary text-white">
-      <div class="container" data-aos="fade-up">
-        <h2>Join the Brenitoch Family</h2>
-        <p class="mb-4">
-          Become part of a forward-thinking community that values excellence, inclusion, and care.
-        </p>
-        <a href="admissions.html" class="btn btn-light me-2">Enroll Your Child</a>
-        <a href="mailto:info@brenitoch.ac.ke" class="btn btn-outline-light">Contact Us</a>
-      </div>
-    </section>
-    <!-- /Call to Action -->
 
   </main>
 
@@ -269,10 +283,10 @@
             <span class="sitename ms-2">Brenitoch School</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>Brenitoch School, Juja</p>
+            <p>Brenitoch School, Thika</p>
             <p>Kiambu County, Kenya</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+254 712 345 678</span></p>
-            <p><strong>Email:</strong> <span>info@brenitoch.ac.ke</span></p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+254 725293622</span></p>
+            <p><strong>Email:</strong> <span>schoolsbrenitoch@gmail.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
             <a href="#"><i class="bi bi-facebook"></i></a>
@@ -301,7 +315,6 @@
             <li><a href="our-facilities.html">School Facilities</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="community.html">Community Engagement</a></li>
-            <li><a href="news.html">News & Updates</a></li>
           </ul>
         </div>
 
@@ -310,7 +323,6 @@
           <h4>Resources</h4>
           <ul>
             <li><a href="privacy.html">Privacy Policy</a></li>
-            <li><a href="feedback.html">Feedback</a></li>
             <li><a href="portal.html">Portal Login</a></li>
           </ul>
         </div>
@@ -320,7 +332,6 @@
           <h4>Support</h4>
           <ul>
             <li><a href="financial-aid.html">Financial Aid</a></li>
-            <li><a href="select-btw.html">Business plan &amp; school polices</a></li>
             <li><a href="student-life.html">Extra-Curricular</a></li>
             <li><a href="employ.html">Employment</a></li>
           </ul>
@@ -336,12 +347,11 @@
     </div>
   </footer>
 
+
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Preloader -->
-  <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
