--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
 					<li><a href="about.html" class="active">About Us</a></li>
 
 					<li class="dropdown">
-						<a href="#"><span>Admissions</span> <i
-								class="bi bi-chevron-down toggle-dropdown"></i></a>
+						<a href="#"><span>Admissions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
 						<ul>
 							<li><a href="admissions.html">Admission Process</a></li>
 							<li><a href="fees.html">Fees</a></li>
@@ -76,7 +75,6 @@
 					</li>
 					<li><a href="events.html">Events</a></li>
 					<li><a href="employ.html">Employment</a></li>
-					<li><a href="contact.html">Contact</a></li>
 					<li class="dropdown"><a href="#"><span>Quick Links</span> <i
 								class="bi bi-chevron-down toggle-dropdown"></i></a>
 						<ul>
@@ -86,6 +84,8 @@
 							<li><a href="portal.html">Portal Login</a></li>
 						</ul>
 					</li>
+					<li><a href="contact.html">Contact</a></li>
+
 				</ul>
 				<i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
 			</nav>
@@ -196,7 +196,7 @@
 				</div>
 			</div>
 
-			<div class="event-ticker">
+			<!-- <div class="event-ticker">
 				<div class="container">
 					<div class="row gy-4">
 						<div class="col-md-12 col-xl-4 col-12 ticker-item">
@@ -206,7 +206,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 
 		</section>
 		<!-- /Hero Section -->
@@ -220,7 +220,7 @@
 
 					<!-- Text with Stunning Drop Cap -->
 					<div class="col-lg-6 order-lg-1 order-2" data-aos="fade-right" data-aos-delay="200">
-						<h2 class="mb-4 text-primary">Welcome to Brenitoch Schools</h2>
+						<h2 class="mb-4">Welcome to Brenitoch Schools</h2>
 						<p class="drop-cap lead" style="font-size: 1.15rem; line-height: 1.8;">
 							Brenitoch Primary School is a distinguished independent private school offering the
 							Competency Based Curriculum (CBC) for Pre-Primary, Primary, and Junior Secondary levels. We
@@ -229,7 +229,7 @@
 							experienced educators, and commitment to holistic development set us apart.
 						</p>
 						<div class="mt-4">
-							<a href="about.html" class="btn btn-primary btn-lg">Learn More About Us</a>
+							<a href="about.html" class="cta-buttons">Learn More About Us</a>
 						</div>
 					</div>
 
@@ -237,8 +237,7 @@
 					<div class="col-lg-6 order-lg-2 order-1" data-aos="fade-left" data-aos-delay="300">
 						<div class="image-container">
 							<img src="assets/img/education/education-1.webp" alt="Brenitoch School Campus"
-								class="img-fluid rounded-4 shadow-lg w-100 transition-zoom"
-								style="max-height: 480px; object-fit: cover; border: 6px solid #fff;">
+								class="img-fluid rounded-4 shadow-lg w-100 transition-zoom">
 						</div>
 					</div>
 				</div>
@@ -288,18 +287,17 @@
 
 			</div>
 		</section>
-		
+
 
 
 
 		<!-- ==================== WHY CHOOSE US ==================== -->
-		<section class="why-choose-us">
+		<section class="why-choose-us container section-title">
 			<div class="container" data-aos="fade-up">
 
 				<!-- Title -->
-				<div class="text-center mb-5">
+				<div class="text-center">
 					<h2 class="section-title">Why Choose Brenitoch School?</h2>
-					<hr class="title-line">
 				</div>
 
 				<!-- Intro Text -->
@@ -418,8 +416,8 @@
 								<div class="row g-0">
 									<div class="col-md-4">
 										<div class="program-image-wrapper">
-											<img src="assets/img/education/programs/elementary/elementary-1.jpeg" class="img-fluid"
-												alt="Program">
+											<img src="assets/img/education/programs/elementary/elementary-1.jpeg"
+												class="img-fluid" alt="Program">
 										</div>
 									</div>
 									<div class="col-md-8">
@@ -446,8 +444,8 @@
 								<div class="row g-0">
 									<div class="col-md-4">
 										<div class="program-image-wrapper">
-											<img src="assets/img/education/programs/middle-school.jpeg" class="img-fluid"
-												alt="Program">
+											<img src="assets/img/education/programs/middle-school.jpeg"
+												class="img-fluid" alt="Program">
 										</div>
 									</div>
 									<div class="col-md-8">
@@ -504,7 +502,7 @@
 		<!-- /Featured Programs Section -->
 
 		<!-- Students Life Block Section -->
-		<section id="students-life-block" class="students-life-block section">
+		<section id="students-life-block" class="students-life-block section stats students-life section">
 			<!-- Section Title -->
 			<div class="container section-title" data-aos="fade-up">
 				<h2>Extra-Curricular at Brenitoch</h2>
@@ -582,7 +580,30 @@
 							</div>
 
 							<div class="students-life-cta" data-aos="fade-up" data-aos-delay="600">
-								<a href="cocurricular.html" class="btn btn-primary">View All Student Activities</a>
+								<a href="students-life.html" class="btn btn-primary">View All Student Activities</a>
+							</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
+			<div class="container" data-aos="fade-up" data-aos-delay="100">
+
+				<div class="cta-wrapper" data-aos="fade-up" data-aos-delay="200">
+					<div class="cta-content">
+						<div class="row align-items-center">
+							<div class="col-lg-8" data-aos="fade-right" data-aos-delay="300">
+								<h3>Ready to Join Our Community?</h3>
+								<p>
+									Step into a school community that celebrates every student’s potential.
+									Discover, learn, and grow with us at Brenitoch.
+								</p>
+							</div>
+							<div class="col-lg-4" data-aos="fade-left" data-aos-delay="400">
+								<div class="cta-buttons">
+									<a href="#" class="btn btn-primary">Schedule a Visit</a>
+									<a href="#" class="btn btn-outline">Apply Now</a>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -591,84 +612,6 @@
 			</div>
 		</section>
 		<!-- /Students Life Block Section -->
-
-
-		<!-- Stats Section -->
-		<section id="stats" class="stats section">
-
-			<div class="container" data-aos="fade-up" data-aos-delay="100">
-
-				<!-- <div class="row">
-					<div class="col-lg-6">
-						<div class="stats-overview" data-aos="fade-right" data-aos-delay="200">
-							<h2 class="stats-title">A New Standard in Kenyan Education</h2>
-							<p class="stats-description">Brenitoch School is built on a foundation of excellence,
-								innovation, and
-								values. We combine world-class educational standards with a deep understanding of the
-								Kenyan curriculum
-								to prepare our students for success in an ever-changing world. Our modern facilities,
-								experienced
-								educators, and commitment to holistic development set us apart.</p>
-						</div>
-					</div>
-					<div class="col-lg-6">
-						<div class="row g-4">
-							<div class="col-md-6">
-								<div class="stats-card" data-aos="zoom-in" data-aos-delay="300">
-									<div class="stats-icon">
-										<i class="bi bi-people-fill"></i>
-									</div>
-									<div class="stats-number">
-										<span data-purecounter-start="0" data-purecounter-end="100"
-											data-purecounter-duration="1" class="purecounter"></span>%
-									</div>
-									<div class="stats-label">Qualified Teachers</div>
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="stats-card" data-aos="zoom-in" data-aos-delay="400">
-									<div class="stats-icon">
-										<i class="bi bi-person-workspace"></i>
-									</div>
-									<div class="stats-number">
-										<span data-purecounter-start="0" data-purecounter-end="15"
-											data-purecounter-duration="1" class="purecounter"></span>:1
-									</div>
-									<div class="stats-label">Student-Teacher Ratio</div>
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="stats-card" data-aos="zoom-in" data-aos-delay="500">
-									<div class="stats-icon">
-										<i class="bi bi-award"></i>
-									</div>
-									<div class="stats-number">
-										<span data-purecounter-start="0" data-purecounter-end="100"
-											data-purecounter-duration="1" class="purecounter"></span>%
-									</div>
-									<div class="stats-label">CBC Compliant</div>
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="stats-card" data-aos="zoom-in" data-aos-delay="600">
-									<div class="stats-icon">
-										<i class="bi bi-building"></i>
-									</div>
-									<div class="stats-number">
-										<span data-purecounter-start="0" data-purecounter-end="5"
-											data-purecounter-duration="1" class="purecounter"></span>+
-									</div>
-									<div class="stats-label">Modern Facilities</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div> -->
-
-			</div>
-
-		</section>
-		<!-- /Stats Section -->
 
 	</main>
 
@@ -685,10 +628,10 @@
 						<span class="sitename ms-2">Brenitoch School</span>
 					</a>
 					<div class="footer-contact pt-3">
-						<p>Brenitoch School, Juja</p>
+						<p>Brenitoch School, Thika</p>
 						<p>Kiambu County, Kenya</p>
-						<p class="mt-3"><strong>Phone:</strong> <span>+254 712 345 678</span></p>
-						<p><strong>Email:</strong> <span>info@brenitoch.ac.ke</span></p>
+						<p class="mt-3"><strong>Phone:</strong> <span>+254 725293622</span></p>
+						<p><strong>Email:</strong> <span>schoolsbrenitoch@gmail.com</span></p>
 					</div>
 					<div class="social-links d-flex mt-4">
 						<a href="#"><i class="bi bi-facebook"></i></a>
@@ -717,7 +660,6 @@
 						<li><a href="our-facilities.html">School Facilities</a></li>
 						<li><a href="events.html">Events</a></li>
 						<li><a href="community.html">Community Engagement</a></li>
-						<li><a href="news.html">News & Updates</a></li>
 					</ul>
 				</div>
 
@@ -725,8 +667,7 @@
 				<div class="col-lg-2 col-md-3 footer-links">
 					<h4>Resources</h4>
 					<ul>
-						<li><a href="privacy.html">Privacy Policy</a></li>
-						<li><a href="feedback.html">Feedback</a></li>
+						<li><a href="select-btw.html">Privacy Policy</a></li>
 						<li><a href="portal.html">Portal Login</a></li>
 					</ul>
 				</div>
