--- a/accomodation.html
+++ b/accomodation.html
@@ -33,59 +33,70 @@
 
 <body class="event-details-page">
 
-  <header id="header" class="header d-flex align-items-center fixed-top">
-    <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+	<header id="header" class="header d-flex align-items-center fixed-top">
+		<div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/logoo.png" alt="School Logo">
-      </a>
+			<a href="index.html" class="logo d-flex align-items-center">
+				<!-- Uncomment the line below if you also wish to use an image logo -->
+				<img src="assets/img/logoo.png" alt="School Logo">
+			</a>
 
-      <nav id="navmenu" class="navmenu">
-        <ul>
-          <li><a href="index.html" class="active">home</a></li>
-          <li class="dropdown"><a href="about.html"><span>About</span> <i
-                class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="students-life.html">Extra-Curricular</a></li>
-              <li><a href="our-facilities.html">School Facilities &amp; Programs</a></li>
+			<nav id="navmenu" class="navmenu">
+				<ul>
+					<li><a href="index.html" class="active">Our School</a></li>
+					<!-- <li class="dropdown"><a href="about.html"><span>About</span> <i
+								class="bi bi-chevron-down toggle-dropdown"></i></a>
+						<ul>
+							<li><a href="about.html">About Us</a></li>
+							<li><a href="our-facilities.html">School Facilities &amp; Programs</a></li>
 
-            </ul>
-          </li>
+						</ul>
+					</li> -->
+					<li><a href="about.html" class="active">About Us</a></li>
 
-          <li><a href="admissions.html">Admissions</a></li>
-          <li><a href="academics.html">Academics</a></li>
-          <li><a href="events.html">Events</a></li>
-          <li><a href="alumni.html">Alumni</a></li>
-          <li><a href="employ.html">Employment</a></li>
-          <li class="dropdown"><a href="#"><span>Quick Links</span> <i
-                class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="select-btw.html">Business plan &amp; school polices</a></li>
-              <li><a href="blog.html">Blog</a></li>
-              <li><a href="accomodation.html">Student Accommodation Info</a></li>
-              <li><a href="scholarship-aid.html">Financial Aid &amp; Scholarships</a></li>
-              <li><a href="portal.html">Portal Login</a></li>
-              <li><a href="community.html">Community Engagement</a></li>
-            </ul>
-          </li>
+					<li class="dropdown">
+						<a href="#"><span>Admissions</span> <i
+								class="bi bi-chevron-down toggle-dropdown"></i></a>
+						<ul>
+							<li><a href="admissions.html">Admission Process</a></li>
+							<li><a href="fees.html">Fees</a></li>
+						</ul>
+					</li>
 
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-      </nav>
+					<li class="dropdown">
+						<a href="academics.html"><span>Academics</span> <i
+								class="bi bi-chevron-down toggle-dropdown"></i></a>
+						<ul>
+							<li><a href="academics.html">Academics</a></li>
+							<li><a href="students-life.html">Extra-Curricular</a></li>
+						</ul>
+					</li>
+					<li><a href="events.html">Events</a></li>
+					<li><a href="employ.html">Employment</a></li>
+					<li class="dropdown"><a href="#"><span>Quick Links</span> <i
+								class="bi bi-chevron-down toggle-dropdown"></i></a>
+						<ul>
+							<li><a href="accomodation.html">Student Accommodation Info</a></li>
+							<li><a href="scholarship-aid.html">Financial Aid &amp; Scholarships</a></li>
+							<li><a href="community.html">Community Engagement</a></li>
+							<li><a href="portal.html">Portal Login</a></li>
+						</ul>
+					</li>
+					<li><a href="contact.html">Contact</a></li>
+					
+				</ul>
+				<i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+			</nav>
 
-    </div>
-  </header>
+		</div>
+	</header>
   <main class="main">
 
     <!-- Page Title -->
     <div class="page-title dark-background" style="background-image: url(assets/img/education/showcase-1.webp);">
       <div class="container position-relative">
         <h1>Boarding Facilities</h1>
-        <p>Safe, comfortable, and nurturing accommodation where students feel at home while pursuing academic excellence
-        </p>
+        
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">home</a></li>
@@ -96,15 +107,15 @@
     </div><!-- End Page Title -->
 
     <!-- Accommodation Section -->
-    <section id="event" class="event section">
+    <section id="event" class="event section stats students-life section">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row">
           <div class="col-lg-8">
-            <div class="event-image mb-4" data-aos="fade-up">
-              <img src="assets/img/education/events-9.webp" alt="Boarding Facilities" class="img-fluid rounded">
-            </div>
+            <!-- <div class="event-image mb-4" data-aos="fade-up">
+              <img src="assets/img/education/facilities/accomodation.jpeg" alt="Boarding Facilities" class="img-fluid rounded">
+            </div> -->
 
             <div class="event-meta mb-4" data-aos="fade-up" data-aos-delay="100">
               <div class="row g-3">
@@ -233,27 +244,6 @@
                 </div>
               </div>
 
-              <div class="event-gallery mt-5" data-aos="fade-up" data-aos-delay="300">
-                <h3>Boarding Facilities Gallery</h3>
-                <p>Take a look at our modern boarding facilities:</p>
-                <div class="row g-4 mt-2">
-                  <div class="col-md-4">
-                    <a href="assets/img/education/events-1.webp" class="glightbox">
-                      <img src="assets/img/education/events-1.webp" alt="Dormitory" class="img-fluid rounded">
-                    </a>
-                  </div>
-                  <div class="col-md-4">
-                    <a href="assets/img/education/events-2.webp" class="glightbox">
-                      <img src="assets/img/education/events-2.webp" alt="Common Room" class="img-fluid rounded">
-                    </a>
-                  </div>
-                  <div class="col-md-4">
-                    <a href="assets/img/education/events-3.webp" class="glightbox">
-                      <img src="assets/img/education/events-3.webp" alt="Dining Hall" class="img-fluid rounded">
-                    </a>
-                  </div>
-                </div>
-              </div>
             </div>
           </div>
 
@@ -291,16 +281,16 @@
               <div class="sidebar-widget organizer-info" data-aos="fade-left" data-aos-delay="300">
                 <h3>Boarding Coordinator</h3>
                 <div class="organizer-details">
-                  <div class="organizer-image">
+                  <!-- <div class="organizer-image">
                     <img src="assets/img/person/person-m-5.webp" class="img-fluid rounded" alt="Coordinator">
-                  </div>
+                  </div> -->
                   <div class="organizer-content">
                     <h4>Mr. James Mwangi</h4>
                     <p class="organizer-position">Head of Boarding</p>
                     <p>For inquiries about boarding facilities and fees, please contact:</p>
                     <div class="organizer-contact">
-                      <p><i class="bi bi-envelope"></i> boarding@brenitoch.ac.ke</p>
-                      <p><i class="bi bi-telephone"></i> +254 700 123 456</p>
+                      <p><i class="bi bi-envelope"></i> schoolsbrenitoch@gmail.com</p>
+                      <p><i class="bi bi-telephone"></i> +254 725 293 622</p>
                     </div>
                   </div>
                 </div>
@@ -341,6 +331,29 @@
         </div>
 
       </div>
+      	<div class="container" data-aos="fade-up" data-aos-delay="100">
+
+				<div class="cta-wrapper" data-aos="fade-up" data-aos-delay="200">
+					<div class="cta-content">
+						<div class="row align-items-center">
+							<div class="col-lg-8" data-aos="fade-right" data-aos-delay="300">
+								<h3>Ready to Join Our Community?</h3>
+								<p>
+									Step into a school community that celebrates every student’s potential.
+									Discover, learn, and grow with us at Brenitoch.
+								</p>
+							</div>
+							<div class="col-lg-4" data-aos="fade-left" data-aos-delay="400">
+								<div class="cta-buttons">
+									<a href="#" class="btn btn-primary">Schedule a Visit</a>
+									<a href="#" class="btn btn-outline">Apply Now</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
 
     </section><!-- /Accommodation Section -->
 
@@ -348,91 +361,84 @@
 
   <!--Footer details to be added here-->
 
-  <footer id="footer" class="footer position-relative dark-background">
-    <div class="container footer-top">
-      <div class="row gy-4">
+ 	<footer id="footer" class="footer position-relative dark-background">
+		<div class="container footer-top">
+			<div class="row gy-4">
 
-        <!-- About / Contact -->
-        <div class="col-lg-4 col-md-6 footer-about">
-          <a href="index.html" class="logo d-flex align-items-center">
-            <img src="assets/img/logoo.png" alt="Brenitoch School Logo">
-            <span class="sitename ms-2">Brenitoch School</span>
-          </a>
-          <div class="footer-contact pt-3">
-            <p>Brenitoch School, Juja</p>
-            <p>Kiambu County, Kenya</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+254 712 345 678</span></p>
-            <p><strong>Email:</strong> <span>info@brenitoch.ac.ke</span></p>
-          </div>
-          <div class="social-links d-flex mt-4">
-            <a href="#"><i class="bi bi-facebook"></i></a>
-            <a href="#"><i class="bi bi-instagram"></i></a>
-            <a href="#"><i class="bi bi-twitter-x"></i></a>
-            <a href="#"><i class="bi bi-linkedin"></i></a>
-          </div>
-        </div>
+				<!-- About / Contact -->
+				<div class="col-lg-4 col-md-6 footer-about">
+					<a href="index.html" class="logo d-flex align-items-center">
+						<img src="assets/img/logoo.png" alt="Brenitoch School Logo">
+						<span class="sitename ms-2">Brenitoch School</span>
+					</a>
+					<div class="footer-contact pt-3">
+						<p>Brenitoch School, Thika</p>
+						<p>Kiambu County, Kenya</p>
+						<p class="mt-3"><strong>Phone:</strong> <span>+254 725293622</span></p>
+						<p><strong>Email:</strong> <span>schoolsbrenitoch@gmail.com</span></p>
+					</div>
+					<div class="social-links d-flex mt-4">
+						<a href="#"><i class="bi bi-facebook"></i></a>
+						<a href="#"><i class="bi bi-instagram"></i></a>
+						<a href="#"><i class="bi bi-twitter-x"></i></a>
+						<a href="#"><i class="bi bi-linkedin"></i></a>
+					</div>
+				</div>
 
-        <!-- Useful Links -->
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Quick Links</h4>
-          <ul>
-            <li><a href="index.html">home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="admissions.html">Admissions</a></li>
-            <li><a href="academics.html">Academics</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-          </ul>
-        </div>
+				<!-- Useful Links -->
+				<div class="col-lg-2 col-md-3 footer-links">
+					<h4>Quick Links</h4>
+					<ul>
+						<li><a href="index.html">Our School</a></li>
+						<li><a href="about.html">About Us</a></li>
+						<li><a href="admissions.html">Admissions</a></li>
+						<li><a href="academics.html">Academics</a></li>
+						<li><a href="contact.html">Contact Us</a></li>
+					</ul>
+				</div>
 
-        <!-- Academics -->
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Academics</h4>
-          <ul>
-            <li><a href="our-facilities.html">School Facilities</a></li>
-            <li><a href="events.html">Events</a></li>
-            <li><a href="community.html">Community Engagement</a></li>
-            <li><a href="news.html">News & Updates</a></li>
-          </ul>
-        </div>
+				<!-- Academics -->
+				<div class="col-lg-2 col-md-3 footer-links">
+					<h4>Academics</h4>
+					<ul>
+						<li><a href="our-facilities.html">School Facilities</a></li>
+						<li><a href="events.html">Events</a></li>
+						<li><a href="community.html">Community Engagement</a></li>
+					</ul>
+				</div>
 
-        <!-- Resources -->
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Resources</h4>
-          <ul>
-            <li><a href="privacy.html">Privacy Policy</a></li>
-            <li><a href="feedback.html">Feedback</a></li>
-            <li><a href="portal.html">Portal Login</a></li>
-            <li><a href="alumni.html">Alumni</a></li>
-          </ul>
-        </div>
+				<!-- Resources -->
+				<div class="col-lg-2 col-md-3 footer-links">
+					<h4>Resources</h4>
+					<ul>
+						<li><a href="privacy.html">Privacy Policy</a></li>
+						<li><a href="portal.html">Portal Login</a></li>
+					</ul>
+				</div>
 
-        <!-- Support -->
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Support</h4>
-          <ul>
-            <li><a href="financial-aid.html">Financial Aid</a></li>
-            <li><a href="select-btw.html">Business plan &amp; school polices</a></li>
-            <li><a href="student-life.html">Extra-Curricular</a></li>
-            <li><a href="employ.html">Employment</a></li>
-          </ul>
-        </div>
+				<!-- Support -->
+				<div class="col-lg-2 col-md-3 footer-links">
+					<h4>Support</h4>
+					<ul>
+						<li><a href="financial-aid.html">Financial Aid</a></li>
+						<li><a href="student-life.html">Extra-Curricular</a></li>
+						<li><a href="employ.html">Employment</a></li>
+					</ul>
+				</div>
 
-      </div>
-    </div>
+			</div>
+		</div>
 
-    <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Brenitoch School</strong> <span>All Rights
-          Reserved</span></p>
+		<div class="container copyright text-center mt-4">
+			<p>© <span>Copyright</span> <strong class="px-1 sitename">Brenitoch School</strong> <span>All Rights
+					Reserved</span></p>
 
-    </div>
-  </footer>
+		</div>
+	</footer>
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
-
-  <!-- Preloader -->
-  <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
