--- a/admissions.html
+++ b/admissions.html
@@ -33,7 +33,6 @@
 
 <body class="admissions-page">
 
-
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
@@ -46,23 +45,23 @@
         <ul>
           <li><a href="index.html" class="active">Our School</a></li>
           <!-- <li class="dropdown"><a href="about.html"><span>About</span> <i
-                class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="our-facilities.html">School Facilities &amp; Programs</a></li>
+								class="bi bi-chevron-down toggle-dropdown"></i></a>
+						<ul>
+							<li><a href="about.html">About Us</a></li>
+							<li><a href="our-facilities.html">School Facilities &amp; Programs</a></li>
 
-            </ul>
-          </li> -->
-
+						</ul>
+					</li> -->
           <li><a href="about.html" class="active">About Us</a></li>
 
           <li class="dropdown">
-            <a href="admissions.html"><span>Admissions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <a href="#"><span>Admissions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="admissions.html">Admission Process</a></li>
               <li><a href="fees.html">Fees</a></li>
             </ul>
           </li>
+
           <li class="dropdown">
             <a href="academics.html"><span>Academics</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
@@ -72,149 +71,96 @@
           </li>
           <li><a href="events.html">Events</a></li>
           <li><a href="employ.html">Employment</a></li>
-          <li><a href="contact.html">Contact</a></li>
           <li class="dropdown"><a href="#"><span>Quick Links</span> <i
                 class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="accomodation.html">Student Accommodation Info</a></li>
               <li><a href="scholarship-aid.html">Financial Aid &amp; Scholarships</a></li>
-              <li><a href="portal.html">Portal Login</a></li>
               <li><a href="community.html">Community Engagement</a></li>
+              <li><a href="portal.html">Portal Login</a></li>
             </ul>
           </li>
+          <li><a href="contact.html">Contact</a></li>
+
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
     </div>
   </header>
+
   <main class="main">
 
     <!-- Page Title -->
     <div class="page-title dark-background" style="background-image: url(assets/img/education/showcase-1.webp);">
       <div class="container position-relative">
-        <h1>Admissions</h1>
-        <!-- <p>Join Brenitoch School — where every child’s potential is nurtured, and every learner begins a journey toward
-          excellence and character.</p> -->
+        <h1>Admissions Inquiry</h1>
+
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Our School</a></li>
-            <li class="current">Admissions</li>
+            <li class="current">Admissions Inquiry</li>
           </ol>
         </nav>
       </div>
     </div><!-- End Page Title -->
 
-    <!-- Admissions Section -->
-    <section id="admissions" class="admissions section">
+    <!-- Inquiry Section -->
+    <section id="admissions-inquiry" class="admissions section stats students-life section">
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <div class="row gy-5 g-lg-5">
+
+        <div class="row gy-5 g-lg-5 align-items-center">
+          <!-- Left Info Column -->
           <div class="col-lg-6">
             <div class="admissions-info" data-aos="fade-up">
-              <h2>Enroll Early and Be Part of Our First Intake</h2>
-              <p>Brenitoch School is now accepting applications for our inaugural academic year, beginning early next
-                year. We welcome learners from Pre-Primary to Junior Secondary levels who are eager to learn, grow, and
-                become responsible citizens in a caring and inspiring environment.</p>
+              <h2>Join Brenitoch School — Where Learning Begins with Curiosity</h2>
+              <p>Brenitoch School opens its doors soon! Our mission is to nurture every learner to discover their
+                potential through curiosity, creativity, and care. We’re now welcoming inquiries from parents and
+                guardians eager to learn more about our programs from Pre-Primary to Junior Secondary.</p>
 
               <div class="admissions-steps mt-5">
-                <h3>How to Apply</h3>
+                <h3>How to Make an Inquiry</h3>
                 <div class="steps-wrapper mt-4">
+
                   <div class="step-item" data-aos="fade-up" data-aos-delay="100">
                     <div class="step-number">1</div>
                     <div class="step-content">
-                      <h4>Pick an Application Form</h4>
-                      <p>Visit home office or download the admission form from our website. Fill in your child’s details
-                        accurately and attach all required documents.</p>
+                      <h4>Reach Out to Us</h4>
+                      <p>Fill out the simple inquiry form on this page or send us an email — our admissions team will
+                        get in touch shortly.</p>
                     </div>
                   </div>
 
                   <div class="step-item" data-aos="fade-up" data-aos-delay="200">
                     <div class="step-number">2</div>
                     <div class="step-content">
-                      <h4>Submit Documents</h4>
-                      <p>Return the completed form with copies of your child’s birth certificate, recent report card (if
-                        applicable), and passport-sized photos to the admissions office or via email.</p>
+                      <h4>Learn About Our School</h4>
+                      <p>We’ll share detailed information about our programs, fees, facilities, and academic approach so
+                        you can make an informed decision.</p>
                     </div>
                   </div>
 
                   <div class="step-item" data-aos="fade-up" data-aos-delay="300">
                     <div class="step-number">3</div>
                     <div class="step-content">
-                      <h4>Attend an Interview or Assessment</h4>
-                      <p>Prospective students may be invited for an informal interview or short assessment to help us
-                        understand their academic level and interests.</p>
+                      <h4>Visit the School</h4>
+                      <p>Book a school tour to experience our beautiful, safe, and engaging learning environment
+                        firsthand.</p>
                     </div>
                   </div>
 
-                  <div class="step-item" data-aos="fade-up" data-aos-delay="400">
-                    <div class="step-number">4</div>
-                    <div class="step-content">
-                      <h4>Receive Admission Offer</h4>
-                      <p>Once your application is reviewed, we’ll contact you with the admission decision and next
-                        steps, including fee structure and orientation details.</p>
-                    </div>
-                  </div>
                 </div>
               </div>
             </div>
           </div>
 
+          <!-- Right Inquiry Form Column -->
           <div class="col-lg-6">
-            <div class="admissions-requirements" data-aos="fade-up">
-              <h3>Admission Requirements</h3>
-              <div class="requirements-list mt-4">
-                <div class="requirement-item" data-aos="fade-up" data-aos-delay="100">
-                  <div class="icon-box">
-                    <i class="bi bi-mortarboard-fill"></i>
-                  </div>
-                  <div>
-                    <h4>Completed Application Form</h4>
-                    <p>Every applicant must submit a duly filled Brenitoch School admission form — available at the
-                      school or online.</p>
-                  </div>
-                </div>
-
-                <div class="requirement-item" data-aos="fade-up" data-aos-delay="200">
-                  <div class="icon-box">
-                    <i class="bi bi-file-earmark-text"></i>
-                  </div>
-                  <div>
-                    <h4>Birth Certificate</h4>
-                    <p>A copy of the learner’s birth certificate for age verification is required during application.
-                    </p>
-                  </div>
-                </div>
-
-                <div class="requirement-item" data-aos="fade-up" data-aos-delay="300">
-                  <div class="icon-box">
-                    <i class="bi bi-journal-richtext"></i>
-                  </div>
-                  <div>
-                    <h4>Previous School Report (if applicable)</h4>
-                    <p>For students transferring from another school, please attach a recent academic report or transfer
-                      letter.</p>
-                  </div>
-                </div>
-
-                <div class="requirement-item" data-aos="fade-up" data-aos-delay="400">
-                  <div class="icon-box">
-                    <i class="bi bi-camera"></i>
-                  </div>
-                  <div>
-                    <h4>Passport Photos</h4>
-                    <p>Two recent passport-sized color photographs of the student should accompany the application form.
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="request-info mt-5" data-aos="fade-up">
+            <div class="request-info" data-aos="fade-up">
               <div class="card">
                 <div class="card-body">
-                  <h3 class="card-title">Request More Information</h3>
-                  <p>Interested in joining Brenitoch School? Send us your details and we’ll reach out with more
-                    information about admissions, programs, and campus tours.</p>
+                  <h3 class="card-title">Send an Inquiry</h3>
+                  <p>Have a question about Brenitoch School? Fill in your details below, and we’ll respond promptly.</p>
 
                   <form class="php-email-form mt-4" action="forms/contact.php">
                     <div class="mb-3">
@@ -227,8 +173,8 @@
                       <input type="tel" name="phone" class="form-control" placeholder="Phone Number">
                     </div>
                     <div class="mb-3">
-                      <select name="subject" class="form-select" required="">
-                        <option value="" selected="" disabled="">Level of Interest</option>
+                      <select name="interest_level" class="form-select" required="">
+                        <option value="" selected="" disabled="">Interested Level</option>
                         <option value="Pre-Primary">Pre-Primary</option>
                         <option value="Lower Primary">Lower Primary</option>
                         <option value="Upper Primary">Upper Primary</option>
@@ -236,14 +182,14 @@
                       </select>
                     </div>
                     <div class="mb-3">
-                      <textarea name="message" class="form-control" rows="3" placeholder="Questions or Comments"
+                      <textarea name="message" class="form-control" rows="3" placeholder="Your Inquiry or Question"
                         required=""></textarea>
                     </div>
                     <div class="loading">Loading</div>
                     <div class="error-message"></div>
-                    <div class="sent-message">Your request has been sent. Thank you!</div>
+                    <div class="sent-message">Your inquiry has been sent. Thank you!</div>
                     <div class="text-center">
-                      <button type="submit" class="btn btn-primary">Submit Request</button>
+                      <button type="submit" class="btn btn-primary">Send Inquiry</button>
                     </div>
                   </form>
                 </div>
@@ -252,28 +198,56 @@
           </div>
         </div>
 
+        <!-- CTA Section -->
         <div class="cta-wrapper mt-5" data-aos="fade-up">
           <div class="row g-0">
             <div class="col-md-6">
               <div class="cta-item tour">
                 <i class="bi bi-building"></i>
                 <h3>Visit Brenitoch School</h3>
-                <p>Come experience our beautiful, safe, and inspiring environment. Campus tours are open for parents and
-                  guardians every weekday.</p>
+                <p>Come experience our welcoming and inspiring learning environment. School tours are open for parents
+                  and guardians by appointment.</p>
+                <a href="mailto:schoolsbrenitoch@gmail.com" class="btn btn-outline-light mt-2">Book a Visit</a>
               </div>
             </div>
             <div class="col-md-6">
               <div class="cta-item apply">
-                <i class="bi bi-file-earmark-check"></i>
-                <h3>Ready to Apply?</h3>
-                <p>Secure your child’s place in our first intake. Admission is ongoing for the upcoming term — spaces
-                  are limited.</p>
+                <i class="bi bi-chat-dots"></i>
+                <h3>Ask a Question</h3>
+                <p>We’re here to help. Reach out anytime to learn more about how your child can become part of Brenitoch
+                  School.</p>
+                <a href="mailto:schoolsbrenitoch@gmail.com" class="btn btn-outline-light mt-2">Email Us</a>
               </div>
             </div>
           </div>
         </div>
+
       </div>
-    </section><!-- /Admissions Section -->
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+        <div class="cta-wrapper" data-aos="fade-up" data-aos-delay="200">
+          <div class="cta-content">
+            <div class="row align-items-center">
+              <div class="col-lg-8" data-aos="fade-right" data-aos-delay="300">
+                <h3>Ready to Join Our Community?</h3>
+                <p>
+                  Step into a school community that celebrates every student’s potential.
+                  Discover, learn, and grow with us at Brenitoch.
+                </p>
+              </div>
+              <div class="col-lg-4" data-aos="fade-left" data-aos-delay="400">
+                <div class="cta-buttons">
+                  <a href="#" class="btn btn-primary">Schedule a Visit</a>
+                  <a href="#" class="btn btn-outline">Apply Now</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- /Inquiry Section -->
 
   </main>
 
@@ -289,10 +263,10 @@
             <span class="sitename ms-2">Brenitoch School</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>Brenitoch School, Juja</p>
+            <p>Brenitoch School, Thika</p>
             <p>Kiambu County, Kenya</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+254 712 345 678</span></p>
-            <p><strong>Email:</strong> <span>info@brenitoch.ac.ke</span></p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+254 725293622</span></p>
+            <p><strong>Email:</strong> <span>schoolsbrenitoch@gmail.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
             <a href="#"><i class="bi bi-facebook"></i></a>
@@ -321,7 +295,6 @@
             <li><a href="our-facilities.html">School Facilities</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="community.html">Community Engagement</a></li>
-            <li><a href="news.html">News & Updates</a></li>
           </ul>
         </div>
 
@@ -330,7 +303,6 @@
           <h4>Resources</h4>
           <ul>
             <li><a href="privacy.html">Privacy Policy</a></li>
-            <li><a href="feedback.html">Feedback</a></li>
             <li><a href="portal.html">Portal Login</a></li>
           </ul>
         </div>
