--- a/events.html
+++ b/events.html
@@ -94,8 +94,7 @@
     <div class="page-title dark-background" style="background-image: url(assets/img/education/showcase-1.webp);">
       <div class="container position-relative">
         <h1>Events</h1>
-        <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam
-          molestias.</p>
+  
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Our School</a></li>
@@ -106,7 +105,7 @@
     </div><!-- End Page Title -->
 
     <!-- Events 2 Section -->
-    <section id="events-2" class="events-2 section">
+    <section id="events-2" class="events-2 section stats students-life section">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
@@ -170,7 +169,7 @@
                   <span class="month">JUL</span>
                 </div>
                 <div class="event-content">
-                  <h3>Graduation Ceremony Class of 2023</h3>
+                  <h3>Graduation Ceremony Class of 2026</h3>
                   <div class="event-meta">
                     <p><i class="bi bi-clock"></i> 10:00 AM - 01:00 PM</p>
                     <p><i class="bi bi-geo-alt"></i> Central Auditorium</p>
@@ -181,17 +180,6 @@
                 </div>
               </div><!-- End Event Item -->
             </div>
-
-            <div class="pagination-wrapper" data-aos="fade-up" data-aos-delay="400">
-              <ul class="pagination justify-content-center">
-                <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1"><i
-                      class="bi bi-chevron-left"></i></a></li>
-                <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item"><a class="page-link" href="#"><i class="bi bi-chevron-right"></i></a></li>
-              </ul>
-            </div>
           </div>
 
           <div class="col-lg-4">
@@ -200,7 +188,7 @@
                 <h3 class="sidebar-title">Upcoming Events</h3>
                 <div class="event-calendar">
                   <div class="calendar-header">
-                    <h4>June 2023</h4>
+                    <h4>June 2026</h4>
                   </div>
                   <div class="calendar-body">
                     <div class="weekdays">
@@ -256,9 +244,8 @@
               <div class="sidebar-item featured-event" data-aos="fade-up" data-aos-delay="200">
                 <h3 class="sidebar-title">Featured Event</h3>
                 <div class="featured-event-content">
-                  <img src="assets/img/education/events-5.webp" alt="Featured Event" class="img-fluid">
                   <h4>Annual Arts Festival</h4>
-                  <p><i class="bi bi-calendar-event"></i> July 15-17, 2023</p>
+                  <p><i class="bi bi-calendar-event"></i> July 15-17, 2026</p>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eget tortor risus consectetur
                     adipiscing elit.</p>
                   <a href="#" class="btn-register">Register Now</a>
@@ -270,88 +257,108 @@
         </div>
 
       </div>
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+				<div class="cta-wrapper" data-aos="fade-up" data-aos-delay="200">
+					<div class="cta-content">
+						<div class="row align-items-center">
+							<div class="col-lg-8" data-aos="fade-right" data-aos-delay="300">
+								<h3>Ready to Join Our Community?</h3>
+								<p>
+									Step into a school community that celebrates every student’s potential.
+									Discover, learn, and grow with us at Brenitoch.
+								</p>
+							</div>
+							<div class="col-lg-4" data-aos="fade-left" data-aos-delay="400">
+								<div class="cta-buttons">
+									<a href="#" class="btn btn-primary">Schedule a Visit</a>
+									<a href="#" class="btn btn-outline">Apply Now</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
 
     </section><!-- /Events 2 Section -->
 
   </main>
 
   <footer id="footer" class="footer position-relative dark-background">
-    <div class="container footer-top">
-      <div class="row gy-4">
+		<div class="container footer-top">
+			<div class="row gy-4">
 
-        <!-- About / Contact -->
-        <div class="col-lg-4 col-md-6 footer-about">
-          <a href="index.html" class="logo d-flex align-items-center">
-            <img src="assets/img/logoo.png" alt="Brenitoch School Logo">
-            <span class="sitename ms-2">Brenitoch School</span>
-          </a>
-          <div class="footer-contact pt-3">
-            <p>Brenitoch School, Juja</p>
-            <p>Kiambu County, Kenya</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+254 712 345 678</span></p>
-            <p><strong>Email:</strong> <span>info@brenitoch.ac.ke</span></p>
-          </div>
-          <div class="social-links d-flex mt-4">
-            <a href="#"><i class="bi bi-facebook"></i></a>
-            <a href="#"><i class="bi bi-instagram"></i></a>
-            <a href="#"><i class="bi bi-twitter-x"></i></a>
-            <a href="#"><i class="bi bi-linkedin"></i></a>
-          </div>
-        </div>
+				<!-- About / Contact -->
+				<div class="col-lg-4 col-md-6 footer-about">
+					<a href="index.html" class="logo d-flex align-items-center">
+						<img src="assets/img/logoo.png" alt="Brenitoch School Logo">
+						<span class="sitename ms-2">Brenitoch School</span>
+					</a>
+					<div class="footer-contact pt-3">
+						<p>Brenitoch School, Thika</p>
+						<p>Kiambu County, Kenya</p>
+						<p class="mt-3"><strong>Phone:</strong> <span>+254 725293622</span></p>
+						<p><strong>Email:</strong> <span>schoolsbrenitoch@gmail.com</span></p>
+					</div>
+					<div class="social-links d-flex mt-4">
+						<a href="#"><i class="bi bi-facebook"></i></a>
+						<a href="#"><i class="bi bi-instagram"></i></a>
+						<a href="#"><i class="bi bi-twitter-x"></i></a>
+						<a href="#"><i class="bi bi-linkedin"></i></a>
+					</div>
+				</div>
 
-        <!-- Useful Links -->
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Quick Links</h4>
-          <ul>
-            <li><a href="index.html">Our School</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="admissions.html">Admissions</a></li>
-            <li><a href="academics.html">Academics</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-          </ul>
-        </div>
+				<!-- Useful Links -->
+				<div class="col-lg-2 col-md-3 footer-links">
+					<h4>Quick Links</h4>
+					<ul>
+						<li><a href="index.html">Our School</a></li>
+						<li><a href="about.html">About Us</a></li>
+						<li><a href="admissions.html">Admissions</a></li>
+						<li><a href="academics.html">Academics</a></li>
+						<li><a href="contact.html">Contact Us</a></li>
+					</ul>
+				</div>
 
-        <!-- Academics -->
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Academics</h4>
-          <ul>
-            <li><a href="our-facilities.html">School Facilities</a></li>
-            <li><a href="events.html">Events</a></li>
-            <li><a href="community.html">Community Engagement</a></li>
-            <li><a href="news.html">News & Updates</a></li>
-          </ul>
-        </div>
+				<!-- Academics -->
+				<div class="col-lg-2 col-md-3 footer-links">
+					<h4>Academics</h4>
+					<ul>
+						<li><a href="our-facilities.html">School Facilities</a></li>
+						<li><a href="events.html">Events</a></li>
+						<li><a href="community.html">Community Engagement</a></li>
+					</ul>
+				</div>
 
-        <!-- Resources -->
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Resources</h4>
-          <ul>
-            <li><a href="privacy.html">Privacy Policy</a></li>
-            <li><a href="feedback.html">Feedback</a></li>
-            <li><a href="portal.html">Portal Login</a></li>
-          </ul>
-        </div>
+				<!-- Resources -->
+				<div class="col-lg-2 col-md-3 footer-links">
+					<h4>Resources</h4>
+					<ul>
+						<li><a href="privacy.html">Privacy Policy</a></li>
+						<li><a href="portal.html">Portal Login</a></li>
+					</ul>
+				</div>
 
-        <!-- Support -->
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Support</h4>
-          <ul>
-            <li><a href="financial-aid.html">Financial Aid</a></li>
-            <li><a href="select-btw.html">Business plan &amp; school polices</a></li>
-            <li><a href="student-life.html">Extra-Curricular</a></li>
-            <li><a href="employ.html">Employment</a></li>
-          </ul>
-        </div>
+				<!-- Support -->
+				<div class="col-lg-2 col-md-3 footer-links">
+					<h4>Support</h4>
+					<ul>
+						<li><a href="financial-aid.html">Financial Aid</a></li>
+						<li><a href="student-life.html">Extra-Curricular</a></li>
+						<li><a href="employ.html">Employment</a></li>
+					</ul>
+				</div>
 
-      </div>
-    </div>
+			</div>
+		</div>
 
-    <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Brenitoch School</strong> <span>All Rights
-          Reserved</span></p>
+		<div class="container copyright text-center mt-4">
+			<p>© <span>Copyright</span> <strong class="px-1 sitename">Brenitoch School</strong> <span>All Rights
+					Reserved</span></p>
 
-    </div>
-  </footer>
+		</div>
+	</footer>
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
