--- a/fees.html
+++ b/fees.html
@@ -121,58 +121,65 @@
 
 <body class="fees-page">
 
-    <!-- Header (Exact Match with index.html) -->
-    <header id="header" class="header d-flex align-items-center fixed-top">
-        <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
-            <a href="index.html" class="logo d-flex align-items-center">
-                <img src="assets/img/logoo.png" alt="School Logo">
-            </a>
+   <header id="header" class="header d-flex align-items-center fixed-top">
+		<div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-            <nav id="navmenu" class="navmenu">
-                <ul>
-                    <li><a href="index.html">Our School</a></li>
-                    <!-- <li class="dropdown"><a href="about.html"><span>About</span> <i
-                                class="bi bi-chevron-down toggle-dropdown"></i></a>
-                        <ul>
-                            <li><a href="about.html">About Us</a></li>
-                            <li><a href="our-facilities.html">School Facilities &amp; Programs</a></li>
-                        </ul>
-                    </li> -->
-                    <li><a href="about.html" class="active">About Us</a></li>
+			<a href="index.html" class="logo d-flex align-items-center">
+				<!-- Uncomment the line below if you also wish to use an image logo -->
+				<img src="assets/img/logoo.png" alt="School Logo">
+			</a>
 
-                    <li class="dropdown">
-                        <a href="#"><span>Admissions</span> <i
-                                class="bi bi-chevron-down toggle-dropdown"></i></a>
-                        <ul>
-                            <li><a href="admissions.html">Admission Process</a></li>
-                            <li><a href="fees.html" class="active">Fees</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="academics.html"><span>Academics</span> <i
-                                class="bi bi-chevron-down toggle-dropdown"></i></a>
-                        <ul>
-                            <li><a href="academics.html">Academics</a></li>
-                            <li><a href="students-life.html">Extra-Curricular</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="events.html">Events</a></li>
-                    <li><a href="employ.html">Employment</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li class="dropdown"><a href="#"><span>Quick Links</span> <i
-                                class="bi bi-chevron-down toggle-dropdown"></i></a>
-                        <ul>
-                            <li><a href="accomodation.html">Student Accommodation Info</a></li>
-                            <li><a href="scholarship-aid.html">Financial Aid &amp; Scholarships</a></li>
-                            <li><a href="community.html">Community Engagement</a></li>
-                            <li><a href="portal.html">Portal Login</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-            </nav>
-        </div>
-    </header>
+			<nav id="navmenu" class="navmenu">
+				<ul>
+					<li><a href="index.html" class="active">Our School</a></li>
+					<!-- <li class="dropdown"><a href="about.html"><span>About</span> <i
+								class="bi bi-chevron-down toggle-dropdown"></i></a>
+						<ul>
+							<li><a href="about.html">About Us</a></li>
+							<li><a href="our-facilities.html">School Facilities &amp; Programs</a></li>
+
+						</ul>
+					</li> -->
+					<li><a href="about.html" class="active">About Us</a></li>
+
+					<li class="dropdown">
+						<a href="#"><span>Admissions</span> <i
+								class="bi bi-chevron-down toggle-dropdown"></i></a>
+						<ul>
+							<li><a href="admissions.html">Admission Process</a></li>
+							<li><a href="fees.html">Fees</a></li>
+						</ul>
+					</li>
+
+					<li class="dropdown">
+						<a href="academics.html"><span>Academics</span> <i
+								class="bi bi-chevron-down toggle-dropdown"></i></a>
+						<ul>
+							<li><a href="academics.html">Academics</a></li>
+							<li><a href="students-life.html">Extra-Curricular</a></li>
+						</ul>
+					</li>
+					<li><a href="events.html">Events</a></li>
+					<li><a href="employ.html">Employment</a></li>
+					<li class="dropdown"><a href="#"><span>Quick Links</span> <i
+								class="bi bi-chevron-down toggle-dropdown"></i></a>
+						<ul>
+							<li><a href="accomodation.html">Student Accommodation Info</a></li>
+							<li><a href="scholarship-aid.html">Financial Aid &amp; Scholarships</a></li>
+							<li><a href="community.html">Community Engagement</a></li>
+							<li><a href="portal.html">Portal Login</a></li>
+						</ul>
+					</li>
+					<li><a href="contact.html">Contact</a></li>
+					
+				</ul>
+				<i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+			</nav>
+
+		</div>
+	</header>
+
+
 
     <main class="main">
 
@@ -190,7 +197,7 @@
         </div>
 
         <!-- Fees Section -->
-        <section id="fees" class="fees section">
+        <section id="fees" class="fees section stats students-life section">
             <div class="container" data-aos="fade-up">
 
                 <div class="row">
@@ -338,79 +345,108 @@
                     </div>
                 </div>
             </div>
+            <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+				<div class="cta-wrapper" data-aos="fade-up" data-aos-delay="200">
+					<div class="cta-content">
+						<div class="row align-items-center">
+							<div class="col-lg-8" data-aos="fade-right" data-aos-delay="300">
+								<h3>Ready to Join Our Community?</h3>
+								<p>
+									Step into a school community that celebrates every student’s potential.
+									Discover, learn, and grow with us at Brenitoch.
+								</p>
+							</div>
+							<div class="col-lg-4" data-aos="fade-left" data-aos-delay="400">
+								<div class="cta-buttons">
+									<a href="#" class="btn btn-primary">Schedule a Visit</a>
+									<a href="#" class="btn btn-outline">Apply Now</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
         </section>
 
     </main>
 
-    <!-- Footer (Exact Match with index.html) -->
-    <footer id="footer" class="footer position-relative dark-background">
-        <div class="container footer-top">
-            <div class="row gy-4">
-                <div class="col-lg-4 col-md-6 footer-about">
-                    <a href="index.html" class="logo d-flex align-items-center">
-                        <img src="assets/img/logoo.png" alt="Brenitoch School Logo">
-                        <span class="sitename ms-2">Brenitoch School</span>
-                    </a>
-                    <div class="footer-contact pt-3">
-                        <p>Brenitoch School, Juja</p>
-                        <p>Kiambu County, Kenya</p>
-                        <p class="mt-3"><strong>Phone:</strong> <span>+254 712 345 678</span></p>
-                        <p><strong>Email:</strong> <span>info@brenitoch.ac.ke</span></p>
-                    </div>
-                    <div class="social-links d-flex mt-4">
-                        <a href="#"><i class="bi bi-facebook"></i></a>
-                        <a href="#"><i class="bi bi-instagram"></i></a>
-                        <a href="#"><i class="bi bi-twitter-x"></i></a>
-                        <a href="#"><i class="bi bi-linkedin"></i></a>
-                    </div>
-                </div>
+  
+	<footer id="footer" class="footer position-relative dark-background">
+		<div class="container footer-top">
+			<div class="row gy-4">
 
-                <div class="col-lg-2 col-md-3 footer-links">
-                    <h4>Quick Links</h4>
-                    <ul>
-                        <li><a href="index.html">Our School</a></li>
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="admissions.html">Admissions</a></li>
-                        <li><a href="academics.html">Academics</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
-                    </ul>
-                </div>
+				<!-- About / Contact -->
+				<div class="col-lg-4 col-md-6 footer-about">
+					<a href="index.html" class="logo d-flex align-items-center">
+						<img src="assets/img/logoo.png" alt="Brenitoch School Logo">
+						<span class="sitename ms-2">Brenitoch School</span>
+					</a>
+					<div class="footer-contact pt-3">
+						<p>Brenitoch School, Thika</p>
+						<p>Kiambu County, Kenya</p>
+						<p class="mt-3"><strong>Phone:</strong> <span>+254 725293622</span></p>
+						<p><strong>Email:</strong> <span>schoolsbrenitoch@gmail.com</span></p>
+					</div>
+					<div class="social-links d-flex mt-4">
+						<a href="#"><i class="bi bi-facebook"></i></a>
+						<a href="#"><i class="bi bi-instagram"></i></a>
+						<a href="#"><i class="bi bi-twitter-x"></i></a>
+						<a href="#"><i class="bi bi-linkedin"></i></a>
+					</div>
+				</div>
 
-                <div class="col-lg-2 col-md-3 footer-links">
-                    <h4>Academics</h4>
-                    <ul>
-                        <li><a href="our-facilities.html">School Facilities</a></li>
-                        <li><a href="events.html">Events</a></li>
-                        <li><a href="community.html">Community Engagement</a></li>
-                        <li><a href="news.html">News & Updates</a></li>
-                    </ul>
-                </div>
+				<!-- Useful Links -->
+				<div class="col-lg-2 col-md-3 footer-links">
+					<h4>Quick Links</h4>
+					<ul>
+						<li><a href="index.html">Our School</a></li>
+						<li><a href="about.html">About Us</a></li>
+						<li><a href="admissions.html">Admissions</a></li>
+						<li><a href="academics.html">Academics</a></li>
+						<li><a href="contact.html">Contact Us</a></li>
+					</ul>
+				</div>
 
-                <div class="col-lg-2 col-md-3 footer-links">
-                    <h4>Resources</h4>
-                    <ul>
-                        <li><a href="privacy.html">Privacy Policy</a></li>
-                        <li><a href="feedback.html">Feedback</a></li>
-                        <li><a href="portal.html">Portal Login</a></li>
-                    </ul>
-                </div>
+				<!-- Academics -->
+				<div class="col-lg-2 col-md-3 footer-links">
+					<h4>Academics</h4>
+					<ul>
+						<li><a href="our-facilities.html">School Facilities</a></li>
+						<li><a href="events.html">Events</a></li>
+						<li><a href="community.html">Community Engagement</a></li>
+					</ul>
+				</div>
 
-                <div class="col-lg-2 col-md-3 footer-links">
-                    <h4>Support</h4>
-                    <ul>
-                        <li><a href="financial-aid.html">Financial Aid</a></li>
-                        <li><a href="student-life.html">Extra-Curricular</a></li>
-                        <li><a href="employ.html">Employment</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+				<!-- Resources -->
+				<div class="col-lg-2 col-md-3 footer-links">
+					<h4>Resources</h4>
+					<ul>
+						<li><a href="privacy.html">Privacy Policy</a></li>
+						<li><a href="portal.html">Portal Login</a></li>
+					</ul>
+				</div>
 
-        <div class="container copyright text-center mt-4">
-            <p>© <span>Copyright</span> <strong class="px-1 sitename">Brenitoch School</strong> <span>All Rights
-                    Reserved</span></p>
-        </div>
-    </footer>
+				<!-- Support -->
+				<div class="col-lg-2 col-md-3 footer-links">
+					<h4>Support</h4>
+					<ul>
+						<li><a href="financial-aid.html">Financial Aid</a></li>
+						<li><a href="student-life.html">Extra-Curricular</a></li>
+						<li><a href="employ.html">Employment</a></li>
+					</ul>
+				</div>
+
+			</div>
+		</div>
+
+		<div class="container copyright text-center mt-4">
+			<p>© <span>Copyright</span> <strong class="px-1 sitename">Brenitoch School</strong> <span>All Rights
+					Reserved</span></p>
+
+		</div>
+	</footer>
 
     <!-- Scroll Top -->
     <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center">
