--- a/select-btw.html
+++ b/select-btw.html
@@ -43,38 +43,44 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="index.html" class="active">Our School</a></li>
-          <li class="dropdown"><a href="about.html"><span>About</span> <i
-                class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="students-life.html">Extra-Curricular</a></li>
-              <li><a href="our-facilities.html">School Facilities &amp; Programs</a></li>
+          <!-- <li class="dropdown"><a href="about.html"><span>About</span> <i
+								class="bi bi-chevron-down toggle-dropdown"></i></a>
+						<ul>
+							<li><a href="about.html">About Us</a></li>
+							<li><a href="our-facilities.html">School Facilities &amp; Programs</a></li>
 
-            </ul>
-          </li>
+						</ul>
+					</li> -->
+          <li><a href="about.html" class="active">About Us</a></li>
 
           <li class="dropdown">
-            <a href="admissions.html"><span>Admissions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <a href="#"><span>Admissions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="admissions.html">Admission Process</a></li>
               <li><a href="fees.html">Fees</a></li>
             </ul>
           </li>
-          <li><a href="academics.html">Academics</a></li>
+
+          <li class="dropdown">
+            <a href="academics.html"><span>Academics</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="academics.html">Academics</a></li>
+              <li><a href="students-life.html">Extra-Curricular</a></li>
+            </ul>
+          </li>
           <li><a href="events.html">Events</a></li>
           <li><a href="employ.html">Employment</a></li>
           <li class="dropdown"><a href="#"><span>Quick Links</span> <i
                 class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="select-btw.html">Business plan &amp; school polices</a></li>
               <li><a href="accomodation.html">Student Accommodation Info</a></li>
               <li><a href="scholarship-aid.html">Financial Aid &amp; Scholarships</a></li>
               <li><a href="community.html">Community Engagement</a></li>
               <li><a href="portal.html">Portal Login</a></li>
             </ul>
           </li>
-
           <li><a href="contact.html">Contact</a></li>
+
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -88,8 +94,7 @@
     <div class="page-title dark-background" style="background-image: url(assets/img/education/showcase-1.webp);">
       <div class="container position-relative">
         <h1>Business Plan and Policies</h1>
-        <p>Our commitment to excellence, safety, and transparency guides every aspect of Brenitoch Primary School’s
-          operations and future growth.</p>
+      
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Our School</a></li>
@@ -253,10 +258,10 @@
             <span class="sitename ms-2">Brenitoch School</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>Brenitoch School, Juja</p>
+            <p>Brenitoch School, Thika</p>
             <p>Kiambu County, Kenya</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+254 712 345 678</span></p>
-            <p><strong>Email:</strong> <span>info@brenitoch.ac.ke</span></p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+254 725293622</span></p>
+            <p><strong>Email:</strong> <span>schoolsbrenitoch@gmail.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
             <a href="#"><i class="bi bi-facebook"></i></a>
@@ -285,7 +290,6 @@
             <li><a href="our-facilities.html">School Facilities</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="community.html">Community Engagement</a></li>
-            <li><a href="news.html">News & Updates</a></li>
           </ul>
         </div>
 
@@ -293,8 +297,7 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Resources</h4>
           <ul>
-            <li><a href="privacy.html">Privacy Policy</a></li>
-            <li><a href="feedback.html">Feedback</a></li>
+            <li><a href="select-btw.html">Privacy Policy</a></li>
             <li><a href="portal.html">Portal Login</a></li>
           </ul>
         </div>
@@ -304,7 +307,6 @@
           <h4>Support</h4>
           <ul>
             <li><a href="financial-aid.html">Financial Aid</a></li>
-            <li><a href="select-btw.html">Business plan &amp; school polices</a></li>
             <li><a href="student-life.html">Extra-Curricular</a></li>
             <li><a href="employ.html">Employment</a></li>
           </ul>
